# Blog

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  README.org  TODO.md  TODO.norg  TODO.org  flake.nix
assets/: Kanagawa.tmTheme
assets/style/: article.css  contact.css  style.css  tags.css
assets/syntaxes/: Nix.sublime-syntax
assets/templates/: article-frontmatter.html  article.html  articles.html  credits.html  footer.html  home.html  nav.html  tag-articles.html  tags.html
assets/templates/static/: contact.html  home.html
posts/: example.md  nixos-on-my-homeserver.md
src/: lib.rs  main.rs  tree_sitter_adapter.rs
src/markdown/: article.rs  mod.rs
src/page_gen/: articles.rs  home.rs  mod.rs  tags.rs
