[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = "0.20.0"
syntect = { version = "5.1.0", default-features = false, features = ["default-fancy"]}
anyhow = "1.0.75"
clap = { version = "4.4.0", features = ["derive"] }
chrono = { version = "0.4.26", default-features = false, features = ["clock", "serde"] }
serde = { version = "1.0.188", features = ["derive"]}
serde_yaml = "0.9.25"
serde_json = "1.0.105"
lazy_static = "1.4.0"
tera = "1.19.0"
